Prevent collapsing of `.button__list` element

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -880,7 +880,8 @@ input[type="submit"] {
 .button__list {
   list-style: none;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  overflow: hidden; }
   .button__list li {
     float: left;
     margin: 0 0.5em 0.5em 0; }
