--- a/assets/scss/modular/_buttons.scss
+++ b/assets/scss/modular/_buttons.scss
@@ -105,6 +105,7 @@ input[type="submit"] {
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
 
 	li {
 		float: left;
